# semantic-gateway

./: Dockerfile  README.md  pyproject.toml
data/: gateway.xml
src/: main.py  model.py
templates/: configuration-edit.html  configuration-view.html  configuration.html  dv-cvm-setting-generator.html
